--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,22 @@
   <body>
 
     <!-- HEADER -->
+
+    <style>
+      #header_wrap.outer {
+        width: 100%;
+        max-width: none;
+        padding: 0;
+      }
+      header.inner {
+        width: 100%;
+        max-width: none;
+        margin: 0 auto;
+        padding: 0 20px;
+      }
+      </style>
+
+    
     <div id="header_wrap" class="outer">
         <header class="inner">
           {% if site.github.is_project_page %}
